[gd_scene load_steps=14 format=3 uid="uid://c15u0m0pgwwo6"]

[ext_resource type="Script" path="res://scripts/nyambung_kabel.gd" id="1_0wuns"]
[ext_resource type="Texture2D" uid="uid://c1eadmqmxgyix" path="res://assets/characters/objects/solus_wire-export.png" id="1_8a4vk"]
[ext_resource type="Texture2D" uid="uid://d3uacym6bwgf6" path="res://assets/characters/objects/kabel/biru.png" id="3_xxxey"]
[ext_resource type="Texture2D" uid="uid://cybl32cdbhqqw" path="res://assets/characters/objects/kabel/wire_pink.png" id="4_g16oe"]
[ext_resource type="Texture2D" uid="uid://dtmwo2tnpyclg" path="res://assets/characters/objects/kabel/wire_yellow.png" id="5_uh8nt"]
[ext_resource type="Texture2D" uid="uid://di65ud280bxo" path="res://assets/characters/objects/kabel/wire_purple.png" id="6_77etv"]
[ext_resource type="Texture2D" uid="uid://b73gomkwaphg6" path="res://assets/characters/objects/kabel/wire_orange.png" id="7_ilv30"]
[ext_resource type="Texture2D" uid="uid://ct5g515bmwd77" path="res://assets/characters/objects/kabel/kuning.png" id="7_ucfym"]
[ext_resource type="Texture2D" uid="uid://qml1jeumyukj" path="res://assets/characters/objects/kabel/wire_green.png" id="8_ssndw"]
[ext_resource type="Texture2D" uid="uid://5elyxukmu27a" path="res://assets/characters/objects/kabel/merah.png" id="8_wn7ju"]
[ext_resource type="Texture2D" uid="uid://brq8jrkm1t76" path="res://assets/characters/objects/kabel/wire_blue.png" id="9_7oxxy"]
[ext_resource type="Script" path="res://scripts/Kabel/kuning_kiri.gd" id="11_gpkhr"]
[ext_resource type="Script" path="res://scripts/Kabel/merah_kiri.gd" id="12_mdjmp"]

[node name="nyambung_kabel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00127987
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_0wuns")
metadata/_edit_use_anchors_ = true

[node name="RobotBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -327.0
offset_right = 326.0
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8a4vk")

[node name="wireBiru" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -324.0
offset_top = -325.0
offset_right = 327.0
offset_bottom = 325.0
texture = ExtResource("9_7oxxy")

[node name="wireMerah" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -328.0
offset_top = -324.0
offset_right = 323.0
offset_bottom = 326.0
texture = ExtResource("4_g16oe")

[node name="wireKuning" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -324.0
offset_top = -323.0
offset_right = 327.0
offset_bottom = 327.0
texture = ExtResource("5_uh8nt")

[node name="wireUngu" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -325.0
offset_top = -324.0
offset_right = 326.0
offset_bottom = 326.0
texture = ExtResource("6_77etv")

[node name="wireOren" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -322.0
offset_top = -325.0
offset_right = 329.0
offset_bottom = 325.0
texture = ExtResource("7_ilv30")

[node name="wireHijau" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -323.0
offset_top = -325.0
offset_right = 328.0
offset_bottom = 325.0
texture = ExtResource("8_ssndw")

[node name="BiruKanan" type="TextureRect" parent="."]
z_index = 1
layout_mode = 2
offset_left = 264.0
offset_top = -234.0
offset_right = 304.0
offset_bottom = -195.0
scale = Vector2(1.59155, 1.59155)

[node name="UnguKanan" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 264.0
offset_top = -166.0
offset_right = 304.0
offset_bottom = -127.0
scale = Vector2(1.59155, 1.59155)

[node name="HijauKanan" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 264.0
offset_top = -94.0
offset_right = 304.0
offset_bottom = -55.0
scale = Vector2(1.59155, 1.59155)

[node name="OrenKanan" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 264.0
offset_top = -18.0
offset_right = 304.0
offset_bottom = 21.0
scale = Vector2(1.59155, 1.59155)

[node name="KuningKanan" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 264.0
offset_top = 58.0
offset_right = 304.0
offset_bottom = 97.0
scale = Vector2(1.59155, 1.59155)

[node name="MerahKanan" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 264.0
offset_top = 136.0
offset_right = 304.0
offset_bottom = 175.0
scale = Vector2(1.59155, 1.59155)

[node name="BiruKiri" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -326.0
offset_top = -93.0
offset_right = -286.0
offset_bottom = -54.0
scale = Vector2(1.59155, 1.59155)
texture = ExtResource("3_xxxey")

[node name="UnguKiri" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -326.0
offset_top = 139.0
offset_right = -286.0
offset_bottom = 178.0
scale = Vector2(1.59155, 1.59155)

[node name="HijauKiri" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -326.0
offset_top = 58.0
offset_right = -286.0
offset_bottom = 97.0
scale = Vector2(1.59155, 1.59155)

[node name="OrenKiri" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -326.0
offset_top = -18.0
offset_right = -286.0
offset_bottom = 21.0
scale = Vector2(1.59155, 1.59155)

[node name="KuningKiri" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -326.0
offset_top = -168.0
offset_right = -286.0
offset_bottom = -129.0
scale = Vector2(1.59155, 1.59155)
texture = ExtResource("7_ucfym")
script = ExtResource("11_gpkhr")

[node name="Line2D" type="Line2D" parent="KuningKiri"]
position = Vector2(-223.188, 0.547734)
points = PackedVector2Array(262.035, 20.3992, 265.177, 20.3951)
width = 20.0
default_color = Color(0.733333, 0.596078, 0.0745098, 1)

[node name="MerahKiri" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = -419.289
offset_top = -225.464
offset_right = -143.289
offset_bottom = -186.464
scale = Vector2(0.231482, 1.59155)
pivot_offset = Vector2(122, 19.5)
texture = ExtResource("8_wn7ju")
script = ExtResource("12_mdjmp")

[node name="Line2D" type="Line2D" parent="MerahKiri"]
position = Vector2(13.9394, 0.258585)
points = PackedVector2Array(251.715, 20.3202, 272.336, 20.3178)
width = 20.0
default_color = Color(0.721569, 0.054902, 0.619608, 1)

[connection signal="mouse_entered" from="KuningKanan" to="KuningKiri" method="_on_kuning_kanan_mouse_entered"]
[connection signal="mouse_exited" from="KuningKanan" to="KuningKiri" method="_on_kuning_kanan_mouse_exited"]
[connection signal="mouse_entered" from="MerahKanan" to="MerahKiri" method="_on_merah_kanan_mouse_entered"]
[connection signal="mouse_exited" from="MerahKanan" to="MerahKiri" method="_on_merah_kanan_mouse_exited"]
[connection signal="mouse_entered" from="KuningKiri" to="KuningKiri" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="KuningKiri" to="KuningKiri" method="_on_mouse_exited"]
[connection signal="benar_merah" from="MerahKiri" to="." method="_on_merah_kiri_benar_merah"]
[connection signal="mouse_entered" from="MerahKiri" to="MerahKiri" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MerahKiri" to="MerahKiri" method="_on_mouse_exited"]
